# hello-cortex-m

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmsis/: CMakeLists.txt  lm3s6965.h  system_lm3s.c  system_lm3s.h
cmsis/GNU/: lm3s6965.ld  startup_lm3s6965.s
hal-stm32/: CMakeLists.txt
src/: main.c  retarget.c
toolchain-files/: gnu-cm3.cmake
